[package]
name = "aoc_4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.5.1"
rayon = "1.8.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true


[profile.bench]
inherits = "release"
debug = true

[[bench]]
name = "benches"
harness = false
